# serializer version: 1
# name: test_all_entities
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_backwash_repeat_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Backwash Repeat Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Backwash Repeat Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtvalve_period_minutes',
      'unique_id': '1234567890_mbf_par_filtvalve_period_minutes',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'enabled',
          'always_on',
          'always_off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_backwash_valve_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Backwash Valve Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Backwash Valve Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtvalve_mode',
      'unique_id': '1234567890_mbf_par_filtvalve_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'inactive',
          'active',
          'active_redox',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_boost_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Boost Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Boost Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'cell_boost',
      'unique_id': '1234567890_mbf_cell_boost',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'manual',
          'auto',
          'heating',
          'smart',
          'intelligent',
          'backwash',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_filtration_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Filtration Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Filtration Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filt_mode',
      'unique_id': '1234567890_mbf_par_filt_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'low',
          'mid',
          'high',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_filtration_speed',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Filtration speed',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Filtration speed',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtration_speed',
      'unique_id': '1234567890_mbf_par_filtration_speed',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '2h',
          '3h',
          '4h',
          '5h',
          '6h',
          '7h',
          '8h',
          '9h',
          '10h',
          '11h',
          '12h',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_intelligent_minimum_filtration_time',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Intelligent: Minimum Filtration Time',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Intelligent: Minimum Filtration Time',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'intelligent_filt_min_time',
      'unique_id': '1234567890_mbf_par_intelligent_filt_min_time',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_light_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Light Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Light Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_light_mode',
      'unique_id': '1234567890_relay_light_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_light_timer_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Light Timer - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Light Timer - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_light_period',
      'unique_id': '1234567890_relay_light_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '10',
          '20',
          '30',
          '40',
          '50',
          '60',
          '120',
          '180',
          '300',
          '900',
          '1800',
          '3600',
          '10800',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_ph_pump_activation_delay',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH pump activation delay',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'pH pump activation delay',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_activation_delay',
      'unique_id': '1234567890_mbf_par_relay_activation_delay',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux1_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux1 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux1 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux1_mode',
      'unique_id': '1234567890_relay_aux1_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux2_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux2 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux2 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux2_mode',
      'unique_id': '1234567890_relay_aux2_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux3_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux3 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux3 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux3_mode',
      'unique_id': '1234567890_relay_aux3_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux4_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux4 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux4 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux4_mode',
      'unique_id': '1234567890_relay_aux4_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'low',
          'mid',
          'high',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_1_filtration_speed',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer 1 - Filtration Speed',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer 1 - Filtration Speed',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtration1_speed',
      'unique_id': '1234567890_filtration1_speed',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'low',
          'mid',
          'high',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_2_filtration_speed',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer 2 - Filtration Speed',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer 2 - Filtration Speed',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtration2_speed',
      'unique_id': '1234567890_filtration2_speed',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'low',
          'mid',
          'high',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_3_filtration_speed',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer 3 - Filtration Speed',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer 3 - Filtration Speed',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filtration3_speed',
      'unique_id': '1234567890_filtration3_speed',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux1_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux1 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux1 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux1_period',
      'unique_id': '1234567890_relay_aux1_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux1_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux1 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux1 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux1b_period',
      'unique_id': '1234567890_relay_aux1b_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux2_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux2 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux2 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux2_period',
      'unique_id': '1234567890_relay_aux2_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux2_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux2 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux2 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux2b_period',
      'unique_id': '1234567890_relay_aux2b_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux3_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux3 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux3 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux3_period',
      'unique_id': '1234567890_relay_aux3_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux3_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux3 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux3 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux3b_period',
      'unique_id': '1234567890_relay_aux3b_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux4_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux4 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux4 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux4_period',
      'unique_id': '1234567890_relay_aux4_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux4_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux4 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux4 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux4b_period',
      'unique_id': '1234567890_relay_aux4b_period',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_setup_when_modules_absent
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'manual',
          'auto',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_filtration_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Filtration Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Filtration Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'filt_mode',
      'unique_id': '1234567890_mbf_par_filt_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_light_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Light Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Light Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_light_mode',
      'unique_id': '1234567890_relay_light_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_light_timer_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Light Timer - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Light Timer - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_light_period',
      'unique_id': '1234567890_relay_light_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux1_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux1 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux1 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux1_mode',
      'unique_id': '1234567890_relay_aux1_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux2_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux2 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux2 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux2_mode',
      'unique_id': '1234567890_relay_aux2_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux3_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux3 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux3 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux3_mode',
      'unique_id': '1234567890_relay_aux3_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'auto',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.neopool_relay_aux4_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Relay Aux4 Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Relay Aux4 Mode',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux4_mode',
      'unique_id': '1234567890_relay_aux4_mode',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux1_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux1 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux1 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux1_period',
      'unique_id': '1234567890_relay_aux1_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux1_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux1 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux1 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux1b_period',
      'unique_id': '1234567890_relay_aux1b_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux2_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux2 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux2 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux2_period',
      'unique_id': '1234567890_relay_aux2_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux2_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux2 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux2 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux2b_period',
      'unique_id': '1234567890_relay_aux2b_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux3_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux3 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux3 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux3_period',
      'unique_id': '1234567890_relay_aux3_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux3_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux3 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux3 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux3b_period',
      'unique_id': '1234567890_relay_aux3b_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux4_1_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux4 (1) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux4 (1) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux4_period',
      'unique_id': '1234567890_relay_aux4_period',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          '1_day',
          '2_days',
          '3_days',
          '4_days',
          '5_days',
          '1_week',
          '2_weeks',
          '3_weeks',
          '4_weeks',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'select',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'select.neopool_timer_aux4_2_interval',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Timer Aux4 (2) - Interval',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Timer Aux4 (2) - Interval',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'relay_aux4b_period',
      'unique_id': '1234567890_relay_aux4b_period',
      'unit_of_measurement': None,
    }),
  ])
# ---
